feat: Return company and employee details during login
